--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "webpack server",
+    "start": "npm run dev",
+    "build": "webpack --mode=production"
   },
   "keywords": [],
   "author": "",
